crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__RUF013_RUF013_0.py.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF013_0.py:21:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
21 | def f(arg: int = None):  # RUF013
   |            ^^^ RUF013
22 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
18 18 |     pass
19 19 | 
20 20 | 
21    |-def f(arg: int = None):  # RUF013
   21 |+def f(arg: int | None = None):  # RUF013
22 22 |     pass
23 23 | 
24 24 | 

RUF013_0.py:25:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
25 | def f(arg: str = None):  # RUF013
   |            ^^^ RUF013
26 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
22 22 |     pass
23 23 | 
24 24 | 
25    |-def f(arg: str = None):  # RUF013
   25 |+def f(arg: str | None = None):  # RUF013
26 26 |     pass
27 27 | 
28 28 | 

RUF013_0.py:29:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
29 | def f(arg: typing.List[str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^ RUF013
30 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
26 26 |     pass
27 27 | 
28 28 | 
29    |-def f(arg: typing.List[str] = None):  # RUF013
   29 |+def f(arg: typing.List[str] | None = None):  # RUF013
30 30 |     pass
31 31 | 
32 32 | 

RUF013_0.py:33:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
33 | def f(arg: Tuple[str] = None):  # RUF013
   |            ^^^^^^^^^^ RUF013
34 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
30 30 |     pass
31 31 | 
32 32 | 
33    |-def f(arg: Tuple[str] = None):  # RUF013
   33 |+def f(arg: Tuple[str] | None = None):  # RUF013
34 34 |     pass
35 35 | 
36 36 | 

RUF013_0.py:67:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
67 | def f(arg: Union = None):  # RUF013
   |            ^^^^^ RUF013
68 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
64 64 |     pass
65 65 | 
66 66 | 
67    |-def f(arg: Union = None):  # RUF013
   67 |+def f(arg: Union | None = None):  # RUF013
68 68 |     pass
69 69 | 
70 70 | 

RUF013_0.py:71:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
71 | def f(arg: Union[int, str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^ RUF013
72 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
68 68 |     pass
69 69 | 
70 70 | 
71    |-def f(arg: Union[int, str] = None):  # RUF013
   71 |+def f(arg: Union[int, str] | None = None):  # RUF013
72 72 |     pass
73 73 | 
74 74 | 

RUF013_0.py:75:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
75 | def f(arg: typing.Union[int, str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^^^^^^^ RUF013
76 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
72 72 |     pass
73 73 | 
74 74 | 
75    |-def f(arg: typing.Union[int, str] = None):  # RUF013
   75 |+def f(arg: typing.Union[int, str] | None = None):  # RUF013
76 76 |     pass
77 77 | 
78 78 | 

RUF013_0.py:94:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
94 | def f(arg: int | float = None):  # RUF013
   |            ^^^^^^^^^^^ RUF013
95 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
91 91 |     pass
92 92 | 
93 93 | 
94    |-def f(arg: int | float = None):  # RUF013
   94 |+def f(arg: int | float | None = None):  # RUF013
95 95 |     pass
96 96 | 
97 97 | 

RUF013_0.py:98:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
   |
98 | def f(arg: int | float | str | bytes = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ RUF013
99 |     pass
   |
   = help: Convert to `T | None`

ℹ Suggested fix
95 95 |     pass
96 96 | 
97 97 | 
98    |-def f(arg: int | float | str | bytes = None):  # RUF013
   98 |+def f(arg: int | float | str | bytes | None = None):  # RUF013
99 99 |     pass
100 100 | 
101 101 | 

RUF013_0.py:113:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
113 | def f(arg: Literal[1, "foo"] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^ RUF013
114 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
110 110 |     pass
111 111 | 
112 112 | 
113     |-def f(arg: Literal[1, "foo"] = None):  # RUF013
    113 |+def f(arg: Literal[1, "foo"] | None = None):  # RUF013
114 114 |     pass
115 115 | 
116 116 | 

RUF013_0.py:117:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
117 | def f(arg: typing.Literal[1, "foo", True] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF013
118 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
114 114 |     pass
115 115 | 
116 116 | 
117     |-def f(arg: typing.Literal[1, "foo", True] = None):  # RUF013
    117 |+def f(arg: typing.Literal[1, "foo", True] | None = None):  # RUF013
118 118 |     pass
119 119 | 
120 120 | 

RUF013_0.py:136:22: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
136 | def f(arg: Annotated[int, ...] = None):  # RUF013
    |                      ^^^ RUF013
137 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
133 133 |     pass
134 134 | 
135 135 | 
136     |-def f(arg: Annotated[int, ...] = None):  # RUF013
    136 |+def f(arg: Annotated[int | None, ...] = None):  # RUF013
137 137 |     pass
138 138 | 
139 139 | 

RUF013_0.py:140:32: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
140 | def f(arg: Annotated[Annotated[int | str, ...], ...] = None):  # RUF013
    |                                ^^^^^^^^^ RUF013
141 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
137 137 |     pass
138 138 | 
139 139 | 
140     |-def f(arg: Annotated[Annotated[int | str, ...], ...] = None):  # RUF013
    140 |+def f(arg: Annotated[Annotated[int | str | None, ...], ...] = None):  # RUF013
141 141 |     pass
142 142 | 
143 143 | 

RUF013_0.py:156:11: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
155 | def f(
156 |     arg1: int = None,  # RUF013
    |           ^^^ RUF013
157 |     arg2: Union[int, float] = None,  # RUF013
158 |     arg3: Literal[1, 2, 3] = None,  # RUF013
    |
    = help: Convert to `T | None`

ℹ Suggested fix
153 153 | 
154 154 | 
155 155 | def f(
156     |-    arg1: int = None,  # RUF013
    156 |+    arg1: int | None = None,  # RUF013
157 157 |     arg2: Union[int, float] = None,  # RUF013
158 158 |     arg3: Literal[1, 2, 3] = None,  # RUF013
159 159 | ):

RUF013_0.py:157:11: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
155 | def f(
156 |     arg1: int = None,  # RUF013
157 |     arg2: Union[int, float] = None,  # RUF013
    |           ^^^^^^^^^^^^^^^^^ RUF013
158 |     arg3: Literal[1, 2, 3] = None,  # RUF013
159 | ):
    |
    = help: Convert to `T | None`

ℹ Suggested fix
154 154 | 
155 155 | def f(
156 156 |     arg1: int = None,  # RUF013
157     |-    arg2: Union[int, float] = None,  # RUF013
    157 |+    arg2: Union[int, float] | None = None,  # RUF013
158 158 |     arg3: Literal[1, 2, 3] = None,  # RUF013
159 159 | ):
160 160 |     pass

RUF013_0.py:158:11: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
156 |     arg1: int = None,  # RUF013
157 |     arg2: Union[int, float] = None,  # RUF013
158 |     arg3: Literal[1, 2, 3] = None,  # RUF013
    |           ^^^^^^^^^^^^^^^^ RUF013
159 | ):
160 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
155 155 | def f(
156 156 |     arg1: int = None,  # RUF013
157 157 |     arg2: Union[int, float] = None,  # RUF013
158     |-    arg3: Literal[1, 2, 3] = None,  # RUF013
    158 |+    arg3: Literal[1, 2, 3] | None = None,  # RUF013
159 159 | ):
160 160 |     pass
161 161 | 

RUF013_0.py:186:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
186 | def f(arg: Union[Annotated[int, ...], Union[str, bytes]] = None):  # RUF013
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF013
187 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
183 183 |     pass
184 184 | 
185 185 | 
186     |-def f(arg: Union[Annotated[int, ...], Union[str, bytes]] = None):  # RUF013
    186 |+def f(arg: Union[Annotated[int, ...], Union[str, bytes]] | None = None):  # RUF013
187 187 |     pass
188 188 | 
189 189 | 

RUF013_0.py:193:13: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
193 | def f(arg: "int" = None):  # RUF013
    |             ^^^ RUF013
194 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
190 190 | # Quoted
191 191 | 
192 192 | 
193     |-def f(arg: "int" = None):  # RUF013
    193 |+def f(arg: "int | None" = None):  # RUF013
194 194 |     pass
195 195 | 
196 196 | 

RUF013_0.py:197:13: RUF013 [*] PEP 484 prohibits implicit `Optional`
    |
197 | def f(arg: "str" = None):  # RUF013
    |             ^^^ RUF013
198 |     pass
    |
    = help: Convert to `T | None`

ℹ Suggested fix
194 194 |     pass
195 195 | 
196 196 | 
197     |-def f(arg: "str" = None):  # RUF013
    197 |+def f(arg: "str | None" = None):  # RUF013
198 198 |     pass
199 199 | 
200 200 | 

RUF013_0.py:201:12: RUF013 PEP 484 prohibits implicit `Optional`
    |
201 | def f(arg: "st" "r" = None):  # RUF013
    |            ^^^^^^^^ RUF013
202 |     pass
    |
    = help: Convert to `T | None`


