crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__RUF200_invalid_author.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
pyproject.toml:6:30: RUF200 Failed to parse pyproject.toml: invalid type: integer `1`, expected a string
  |
6 | # Ensure that the spans from toml handle utf-8 correctly
7 | authors = [
8 |     { name = "콘스턴틴", email = 1 }
  |                                  ^ RUF200
9 | ]
  |


