crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__RUF200_maturin_gh_1615.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
./resources/test/fixtures/ruff/pyproject_toml/maturin_gh_1615/pyproject.toml:9:17: RUF200 Failed to parse pyproject.toml: wanted string or table
   |
 9 | [project]
10 | name = "..."
11 | license-files = [ "license.txt",]
   |                 ^^^^^^^^^^^^^^^^^ RUF200
12 | requires-python = ">=3.8"
13 | requires-dist = [ "maturin>=0.14", "...",]
   |


