crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruf100_0.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF100_0.py:9:12: RUF100 [*] Unused blanket `noqa` directive
   |
 8 |     # Invalid
 9 |     c = 1  # noqa
   |            ^^^^^^ RUF100
10 |     print(c)
   |
   = help: Remove unused `noqa` directive

ℹ Fix
6  6  |     b = 2  # noqa: F841
7  7  | 
8  8  |     # Invalid
9     |-    c = 1  # noqa
   9  |+    c = 1
10 10 |     print(c)
11 11 | 
12 12 |     # Invalid

RUF100_0.py:13:12: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
12 |     # Invalid
13 |     d = 1  # noqa: E501
   |            ^^^^^^^^^^^^ RUF100
14 | 
15 |     # Invalid
   |
   = help: Remove unused `noqa` directive

ℹ Fix
10 10 |     print(c)
11 11 | 
12 12 |     # Invalid
13    |-    d = 1  # noqa: E501
   13 |+    d = 1
14 14 | 
15 15 |     # Invalid
16 16 |     d = 1  # noqa: F841, E501

RUF100_0.py:16:12: RUF100 [*] Unused `noqa` directive (unused: `F841`, `E501`)
   |
15 |     # Invalid
16 |     d = 1  # noqa: F841, E501
   |            ^^^^^^^^^^^^^^^^^^ RUF100
17 | 
18 |     # Invalid (and unimplemented or not enabled)
   |
   = help: Remove unused `noqa` directive

ℹ Fix
13 13 |     d = 1  # noqa: E501
14 14 | 
15 15 |     # Invalid
16    |-    d = 1  # noqa: F841, E501
   16 |+    d = 1
17 17 | 
18 18 |     # Invalid (and unimplemented or not enabled)
19 19 |     d = 1  # noqa: F841, W191, F821

RUF100_0.py:19:12: RUF100 [*] Unused `noqa` directive (unused: `F841`, `W191`; non-enabled: `F821`)
   |
18 |     # Invalid (and unimplemented or not enabled)
19 |     d = 1  # noqa: F841, W191, F821
   |            ^^^^^^^^^^^^^^^^^^^^^^^^ RUF100
20 | 
21 |     # Invalid (but external)
   |
   = help: Remove unused `noqa` directive

ℹ Fix
16 16 |     d = 1  # noqa: F841, E501
17 17 | 
18 18 |     # Invalid (and unimplemented or not enabled)
19    |-    d = 1  # noqa: F841, W191, F821
   19 |+    d = 1
20 20 | 
21 21 |     # Invalid (but external)
22 22 |     d = 1  # noqa: F841, V101

RUF100_0.py:22:12: RUF100 [*] Unused `noqa` directive (unused: `F841`)
   |
21 |     # Invalid (but external)
22 |     d = 1  # noqa: F841, V101
   |            ^^^^^^^^^^^^^^^^^^ RUF100
23 | 
24 |     # fmt: off
   |
   = help: Remove unused `noqa` directive

ℹ Fix
19 19 |     d = 1  # noqa: F841, W191, F821
20 20 | 
21 21 |     # Invalid (but external)
22    |-    d = 1  # noqa: F841, V101
   22 |+    d = 1  # noqa: V101
23 23 | 
24 24 |     # fmt: off
25 25 |     # Invalid - no space before #

RUF100_0.py:26:10: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
24 |     # fmt: off
25 |     # Invalid - no space before #
26 |     d = 1# noqa: E501
   |          ^^^^^^^^^^^^ RUF100
27 | 
28 |     # Invalid - many spaces before #
   |
   = help: Remove unused `noqa` directive

ℹ Fix
23 23 | 
24 24 |     # fmt: off
25 25 |     # Invalid - no space before #
26    |-    d = 1# noqa: E501
   26 |+    d = 1
27 27 | 
28 28 |     # Invalid - many spaces before #
29 29 |     d = 1                       # noqa: E501

RUF100_0.py:29:5: F841 [*] Local variable `d` is assigned to but never used
   |
28 |     # Invalid - many spaces before #
29 |     d = 1                       # noqa: E501
   |     ^ F841
30 |     # fmt: on
   |
   = help: Remove assignment to unused variable `d`

ℹ Suggested fix
26 26 |     d = 1# noqa: E501
27 27 | 
28 28 |     # Invalid - many spaces before #
29    |-    d = 1                       # noqa: E501
30 29 |     # fmt: on
31 30 | 
32 31 | 

RUF100_0.py:29:33: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
28 |     # Invalid - many spaces before #
29 |     d = 1                       # noqa: E501
   |                                 ^^^^^^^^^^^^ RUF100
30 |     # fmt: on
   |
   = help: Remove unused `noqa` directive

ℹ Fix
26 26 |     d = 1# noqa: E501
27 27 | 
28 28 |     # Invalid - many spaces before #
29    |-    d = 1                       # noqa: E501
   29 |+    d = 1
30 30 |     # fmt: on
31 31 | 
32 32 | 

RUF100_0.py:55:6: RUF100 [*] Unused `noqa` directive (unused: `F841`)
   |
54 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
55 | """  # noqa: E501, F841
   |      ^^^^^^^^^^^^^^^^^^ RUF100
56 | 
57 | # Invalid
   |
   = help: Remove unused `noqa` directive

ℹ Fix
52 52 |     https://github.com/PyCQA/pycodestyle/pull/258/files#diff-841c622497a8033d10152bfdfb15b20b92437ecdea21a260944ea86b77b51533
53 53 | 
54 54 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
55    |-"""  # noqa: E501, F841
   55 |+"""  # noqa: E501
56 56 | 
57 57 | # Invalid
58 58 | _ = """Lorem ipsum dolor sit amet.

RUF100_0.py:63:6: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
62 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
63 | """  # noqa: E501
   |      ^^^^^^^^^^^^ RUF100
64 | 
65 | # Invalid
   |
   = help: Remove unused `noqa` directive

ℹ Fix
60 60 |     https://github.com/PyCQA/pycodestyle/pull/258/files#diff-841c622497a8033d10152bfdfb15b20b92437ecdea21a260944ea86b77b51533
61 61 | 
62 62 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
63    |-"""  # noqa: E501
   63 |+"""
64 64 | 
65 65 | # Invalid
66 66 | _ = """Lorem ipsum dolor sit amet.

RUF100_0.py:71:6: RUF100 [*] Unused blanket `noqa` directive
   |
70 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
71 | """  # noqa
   |      ^^^^^^ RUF100
72 | 
73 | # Valid
   |
   = help: Remove unused `noqa` directive

ℹ Fix
68 68 |     https://github.com/PyCQA/pycodestyle/pull/258/files#diff-841c622497a8033d10152bfdfb15b20b92437ecdea21a260944ea86b77b51533
69 69 | 
70 70 | Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
71    |-"""  # noqa
   71 |+"""
72 72 | 
73 73 | # Valid
74 74 | # this is a veryyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy long comment  # noqa: E501

RUF100_0.py:85:8: F401 [*] `shelve` imported but unused
   |
83 | import collections  # noqa
84 | import os  # noqa: F401, RUF100
85 | import shelve  # noqa: RUF100
   |        ^^^^^^ F401
86 | import sys  # noqa: F401, RUF100
   |
   = help: Remove unused import: `shelve`

ℹ Fix
82 82 | 
83 83 | import collections  # noqa
84 84 | import os  # noqa: F401, RUF100
85    |-import shelve  # noqa: RUF100
86 85 | import sys  # noqa: F401, RUF100
87 86 | 
88 87 | print(sys.path)

RUF100_0.py:90:89: E501 Line too long (103 > 88 characters)
   |
88 | print(sys.path)
89 | 
90 | "shape:  (6,)\nSeries: '' [duration[μs]]\n[\n\t0µs\n\t1µs\n\t2µs\n\t3µs\n\t4µs\n\t5µs\n]"  # noqa: F401
   |                                                                                         ^^^^^^^^^^^^^^^ E501
   |

RUF100_0.py:90:92: RUF100 [*] Unused `noqa` directive (unused: `F401`)
   |
88 | print(sys.path)
89 | 
90 | "shape:  (6,)\nSeries: '' [duration[μs]]\n[\n\t0µs\n\t1µs\n\t2µs\n\t3µs\n\t4µs\n\t5µs\n]"  # noqa: F401
   |                                                                                            ^^^^^^^^^^^^ RUF100
   |
   = help: Remove unused `noqa` directive

ℹ Fix
87 87 | 
88 88 | print(sys.path)
89 89 | 
90    |-"shape:  (6,)\nSeries: '' [duration[μs]]\n[\n\t0µs\n\t1µs\n\t2µs\n\t3µs\n\t4µs\n\t5µs\n]"  # noqa: F401
   90 |+"shape:  (6,)\nSeries: '' [duration[μs]]\n[\n\t0µs\n\t1µs\n\t2µs\n\t3µs\n\t4µs\n\t5µs\n]"
91 91 | 
92 92 | 
93 93 | def f():


